public/stylesheets/main.css
/* COMMON TO ALL */
html {
	position: relative; 
	min-height: 100%; 
}

body {
    background: black;
    
}

/* WELCOME PAGE */


/* FULL BLOG READ PAGE */
.thumbnail img {
    width: 100%;
}
.thumbnail {
    padding: 0;
}
.thumbnail .caption-full {
    padding: 9px;
}
.deleteForm {
    display: inline;
}
.details {
    color: white;
}
/* LOGIN AND SIGNUP PAGE */


/* ADD AND EDIT COMMENT PAGE */



/* HEADER */



/* FOOTER */
footer {
    padding: 10px 0;
    width: 100%;
    position: absolute; 
    bottom: 0;
    overflow: hidden; 
}

